--- a/src/MainPage.form
+++ b/src/MainPage.form
@@ -38,7 +38,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Position"/>
+          <text value="Department"/>
         </properties>
       </component>
       <component id="af834" class="javax.swing.JTextField" binding="txtId">
@@ -59,7 +59,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="6a2fa" class="javax.swing.JTextField" binding="txtPosition">
+      <component id="6a2fa" class="javax.swing.JTextField" binding="txtDepartment">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
