--- a/src/MainPageGUI.form
+++ b/src/MainPageGUI.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MainPage">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MainPageGUI">
   <grid id="27dc6" binding="MainPage" layout-manager="GridLayoutManager" row-count="12" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -171,6 +171,14 @@
         </constraints>
         <properties>
           <text value="Increase Wage"/>
+        </properties>
+      </component>
+      <component id="c1c7b" class="javax.swing.JButton" binding="btnTest">
+        <constraints>
+          <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Test"/>
         </properties>
       </component>
     </children>
